--- a/src/components/modals/confirm-action/index.css
+++ b/src/components/modals/confirm-action/index.css
@@ -15,12 +15,12 @@
     width: 100%;
     height: 100%;
     z-index: 998;
-    backdrop-filter: blur(8px);
+    background: var(--blur-background-color);
+	backdrop-filter: blur(var(--blur-background-pixel));
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: rgba(6, 6, 6, 0.8);
     padding-top: 300px;
     color: rgba(255, 255, 255, 0.0);
     transition: .25s;
@@ -46,7 +46,6 @@
 }
 
 .modal__confirm__action__container__close:hover {
-    transform: scale(1.02);
     color: white;
     opacity: 1;
 }
@@ -99,7 +98,5 @@
 .modal__button__confirm__container, 
 .modal__header__container, 
 .modal__confirm__action__container__close {
-    -webkit-animation: slide-top 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation: slide-top 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-
+    animation: fade-in .4s;
 }
