--- a/src/components/notify/index.css
+++ b/src/components/notify/index.css
@@ -1,16 +1,13 @@
 .notify__container {
     position: absolute;
     z-index: 999999;
-    width: 100%;
-    height: 100%;
     display: flex;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     justify-content: center;
     align-items: center;
-	backdrop-filter: blur(2px);
-    background: rgb(6, 6, 6, 0.8);
-    -webkit-animation: slide-top 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-    animation: slide-top 0.3s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
-
+    animation: slide-top-no-transform .3s;
 }
 
 .notify__header {
@@ -18,6 +15,7 @@
 }
 
 .notify__body {
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -61,9 +59,41 @@
 
 .tap__close__label {
     position: absolute;
-    font-size: 18px;
-    margin-top: 20%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    height: 100%;
     color: var(--alpha-color);
     transition: .26s;
+    background: var(--blur-background-color);
+	backdrop-filter: blur(var(--blur-background-pixel));
+    z-index: 999998;
 }
 
+.tap__close__label:hover + .notify__container .tap__to__close__div {
+    opacity: 1;
+}
+
+.tap__to__close__div:hover {
+    opacity: 1;
+}
+
+.tap__close__label > p {
+    font-size: 32px;
+    margin-top: 300px;
+    color: white;
+}
+
+.tap__to__close__div {
+    position: absolute;
+    font-size: 32px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    top: 250%;
+    right: 10%;
+    opacity: 0;
+    transition: .4s;
+    animation: fade-in .4s;
+}
