--- a/src/components/modals/confirm-delete-image/index.css
+++ b/src/components/modals/confirm-delete-image/index.css
@@ -1,10 +1,10 @@
 .modal-delete-question-image-container {
-    position: absolute;
+    position: fixed;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    z-index: 999;
+    z-index: 1001;
     left: 50%;
     transform: translateX(-50%);
     top: 10%;
@@ -97,10 +97,10 @@
 }
 
 .modal-delete-question-close-text {
-    position: absolute;
+    position: fixed;
     width: 100%;
     height: 100%;
-    z-index: 998;
+    z-index: 1000;
     background: var(--blur-background-color);
 	backdrop-filter: blur(var(--blur-background-pixel));
     display: flex;
