--- a/src/pages/quiz/take/style.css
+++ b/src/pages/quiz/take/style.css
@@ -136,8 +136,9 @@
     justify-content: center;
     width: 100%;
     font-size: 20px;
-    margin-bottom: 20px;
-    min-height: 600px;
+    margin-bottom: 50px;
+    margin-top: 30px;
+    white-space: pre-wrap;
 }
 
 
