--- a/src/pages/quiz/global.style.css
+++ b/src/pages/quiz/global.style.css
@@ -354,6 +354,7 @@ button:active,
 
 .quiz__duration {
 	margin-bottom: 55px;
+	margin-right: 50px;
 }
 
 .quiz__duration > .title {
@@ -372,6 +373,7 @@ button:active,
 
 .quiz__duration > .form {
 	display: flex;
+	align-items: center;
 }
 .quiz__duration > .form input {
 	background: transparent;
@@ -413,7 +415,6 @@ button:active,
 	margin-right: 5px;
 }
 
-
 .question__explanation__image {
 	justify-content: center;
 	display: grid;
@@ -430,7 +431,7 @@ button:active,
 .question__explanation__image > .image__item > img {
 	height: 100%;
 	object-fit: contain;
-	transition: .25s;
+	transition: 0.25s;
 }
 
 .question__explanation__image > .image__item:hover > .remove__label {
@@ -445,7 +446,6 @@ button:active,
 	opacity: 0.1;
 }
 
-
 .question__explanation__image > .image__item > .remove__label {
 	position: absolute;
 	display: flex;
@@ -458,7 +458,7 @@ button:active,
 	opacity: 0;
 	color: white;
 	font-weight: bold;
-	transition: .2s;
+	transition: 0.2s;
 }
 
 .question__explanation__image > img:hover {
@@ -480,5 +480,74 @@ button:active,
 .take-explanation-image > .image-item > img {
 	height: 100%;
 	object-fit: contain;
-	transition: .25s;
+	transition: 0.25s;
+}
+
+.edit-detail-action-fixed {
+	display: flex;
+	align-items: center;
+}
+
+/* The switch - the box around the slider */
+.switch {
+	font-size: 17px;
+	position: relative;
+	display: inline-block;
+	width: 2em;
+	height: 2em;
+	margin-right: 5px;
+}
+
+/* Hide default HTML checkbox */
+.switch .chk {
+	opacity: 0;
+	width: 0;
+	height: 0;
+}
+
+/* The slider */
+.slider {
+	position: absolute;
+	cursor: pointer;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color: var(--button-un-active-color);
+	transition: 0.4s;
+	border-radius: 50%;
+}
+
+.slider:before {
+	position: absolute;
+	content: "";
+	height: 1.4em;
+	width: 1.4em;
+	border-radius: 2.5px;
+	left: 0.3em;
+	bottom: 0.3em;
+	background-color: white;
+	transition: 0.4s;
+	scale: 0;
+}
+
+.chk:checked + .slider {
+	background: var(--success-button-color);
+	transform: scale(0.9);
+	border-radius: 50%;
+}
+
+.chk:checked + .slider:before {
+	transform: rotateZ(360deg);
+	scale: 1;
+	border-radius: 50%;
+}
+
+
+.switch_label {
+	font-size: 15px;
+	color: rgba(255, 255, 255, 0.5);
+	white-space: pre-wrap;
+	margin-top: 8px;
+	margin-left: 2px;
 }
