--- a/src/pages/quiz/reveal/style.css
+++ b/src/pages/quiz/reveal/style.css
@@ -53,6 +53,7 @@ body {
 
 .reveal__question__container {
     margin-left: 30px;
+    margin-top: 30px;
 }
 .reveal__question__title svg {
     display: inline-block;
@@ -107,13 +108,35 @@ body {
     transform: translateX(-50%);
     width: 500px;
 }
-
-.question__type {
+.question__explanation__container > .question {
     font-size: 20px;
-    font-weight: 600;
-    margin-bottom: 10px;
-    margin-top: 180px;
+    margin-bottom: 100px;
 }
+
+.reveal__animation__fade__in {
+    animation: fade-in 0.5s;
+}
+
+.question__property {
+    display: flex;
+}
+.question__property > .property {
+    display: flex;
+    align-items: center;
+    font-size: 18px;
+    margin-right: 20px;
+}
+.question__property > .property > .icon {
+    width: 18px;
+    height: 18px;
+    margin-right: 6px;
+}
+.question__property > .property > .icon > svg {
+    width: 100%;
+    height: 100%;
+}
+
+
 
 .question__reveal__answer__grid__odd {
     vertical-align: top;
