--- a/src/pages/quiz/global.style.css
+++ b/src/pages/quiz/global.style.css
@@ -15,6 +15,7 @@
 	justify-content: center;
 	margin: 50px auto;
 	margin-left: calc((100vw - 1205px) / 1.75);
+	animation: fade-in 0.8s;
 }
 
 .question__content > .settings {
@@ -471,6 +472,7 @@ button:active,
 	grid-template-columns: 450px 450px;
 	column-gap: 10px;
 	row-gap: 10px;
+	animation: fade-in 0.3s;
 }
 
 .take-explanation-image > .image-item {
@@ -527,7 +529,6 @@ button:active,
 	left: 0.3em;
 	bottom: 0.3em;
 	background-color: white;
-	transition: 0.4s;
 	scale: 0;
 }
 
