--- a/src/pages/quiz/reveal/style.css
+++ b/src/pages/quiz/reveal/style.css
@@ -1,198 +1,284 @@
 * {
-    user-select: none;
+	user-select: none;
 }
 
 body {
 	background: var(--web-background-color);
-    overflow-x: hidden;
+	overflow-x: hidden;
 }
 
 *:focus {
-    outline: none;
+	outline: none;
 }
 
 ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent;
+	width: 0px;
+	background: transparent;
 }
 
 :root {
-    --active-color: linear-gradient(180deg, #3D7FA1 0%, #355F75 100%);
-    --unactive-color: #5E5E5E;
+	--active-color: linear-gradient(180deg, #3d7fa1 0%, #355f75 100%);
+	--unactive-color: #5e5e5e;
 }
 
 .nav__bar {
-    padding: 20px 30px 20px 30px;
-    display: flex;
-    justify-content: space-between;
+	padding: 20px 30px 20px 30px;
+	display: flex;
+	justify-content: space-between;
 }
 .nav__user__profile {
-    display: flex;
-    align-items: center;
+	display: flex;
+	align-items: center;
 }
 .user__image {
-    object-fit: cover;
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    margin-right: 10px;
-    text-align: center;
-    vertical-align: middle;
+	object-fit: cover;
+	width: 50px;
+	height: 50px;
+	border-radius: 50%;
+	margin-right: 10px;
+	text-align: center;
+	vertical-align: middle;
 }
 .user__fullname {
-    font-size: 30px;
-    vertical-align: middle;
+	font-size: 30px;
+	vertical-align: middle;
 }
 .user__current__reveal__quiz__name {
-    vertical-align: middle;
-    display: inline-block;
-    font-size: 40px;
-    font-weight: 600;
+	vertical-align: middle;
+	display: inline-block;
+	font-size: 40px;
+	font-weight: 600;
 }
-
 
 .reveal__question__container {
-    margin-left: 30px;
-    margin-top: 30px;
+	position: fixed;
+	margin-left: 30px;
+	margin-top: 30px;
 }
 .reveal__question__title svg {
-    display: inline-block;
-    vertical-align: middle;
-    margin-right: 8px;
-    margin-bottom: 2px;
+	display: inline-block;
+	vertical-align: middle;
+	margin-right: 8px;
+	margin-bottom: 2px;
 }
 .reveal__question__title {
-    display: inline-block;
-    vertical-align: middle;
-    font-size: 26px;
+	display: inline-block;
+	vertical-align: middle;
+	font-size: 26px;
 }
 .reveal__question__selection__grid {
-    margin-top: 7px;
-    display: grid;
-    width: 260px;
-    grid-template-columns: 40px 40px 40px 40px 40px;
-    column-gap: 10px;
-    row-gap: 10px;
-
+	margin-top: 7px;
+	display: grid;
+	width: 260px;
+	grid-template-columns: 40px 40px 40px 40px 40px;
+	column-gap: 10px;
+	row-gap: 10px;
 }
 .reveal__question__selection__grid button {
-    font-size: 20px;
-    width: 40px;
-    height: 40px;
-    background: var(--unactive-color);
-    border-radius: 3px;
-    transition: .3s;
+	font-size: 20px;
+	width: 40px;
+	height: 40px;
+	background: var(--unactive-color);
+	border-radius: 3px;
+	transition: 0.3s;
 }
 .reveal__question__selection__grid button:hover {
-    transform: scale(1.08);
+	transform: scale(1.08);
 }
 .reveal__question__selection__grid button:active {
-    background: var(--active-color);
-    transform: scale(0.95);
+	background: var(--active-color);
+	transform: scale(0.95);
 }
 
 .question__explanation__container {
-    position: absolute;
-    left: 50%;
-    top: 15%;
-    transform: translateX(-50%);
+	position: absolute;
+	left: 50%;
+	top: 15%;
+	transform: translateX(-50%);
+	transition: .3s;
+	animation: fade-in .3s;
 }
-.question__explanation__container p {
 
-    font-size: 30px;
-    text-align: center;
+.question__explanation__container.fade-out {
+	opacity: 0;
+}
+
+.question__explanation__container p {
+	font-size: 30px;
+	text-align: center;
 }
 .question__explanation__container img {
-    margin-left: 50%;
-    margin-bottom: 30px;
-    transform: translateX(-50%);
-    width: 500px;
+	margin-left: 50%;
+	margin-bottom: 30px;
+	transform: translateX(-50%);
+	width: 500px;
 }
 .question__explanation__container > .question {
-    font-size: 20px;
-    margin-bottom: 100px;
+	font-size: 20px;
+	margin-bottom: 50px;
 }
 
 .reveal__animation__fade__in {
-    animation: fade-in 0.5s;
+	animation: fade-in 0.5s;
 }
 
 .question__property {
-    display: flex;
+	display: flex;
+	margin-bottom: 5px;
 }
 .question__property > .property {
-    display: flex;
-    align-items: center;
-    font-size: 18px;
-    margin-right: 20px;
+	display: flex;
+	align-items: center;
+	font-size: 18px;
+	margin-right: 20px;
 }
 .question__property > .property > .icon {
-    width: 18px;
-    height: 18px;
-    margin-right: 6px;
-}
-.question__property > .property > .icon > svg {
-    width: 100%;
-    height: 100%;
+	width: 18px;
+	height: 18px;
+	margin-right: 6px;
 }
 
-
+.question__property > .property > .icon-2 {
+	width: 20px;
+	height: 20px;
+	margin-right: 6px;
+}
+.question__property > .property > .icon > svg,
+.question__property > .property > .icon-2 > svg {
+	width: 100%;
+	height: 100%;
+}
 
 .question__reveal__answer__grid__odd {
-    vertical-align: top;
-    margin-right: 50px;
-    display: inline-grid;
-    column-gap: 50px;
-    row-gap: 16px;
+	vertical-align: top;
+	margin-right: 50px;
+	display: inline-grid;
+	column-gap: 50px;
+	row-gap: 16px;
 }
 .question__reveal__answer__grid__even {
-    vertical-align: top;
-    display: inline-grid;
-    column-gap: 50px;
-    row-gap: 16px;
+	vertical-align: top;
+	display: inline-grid;
+	column-gap: 50px;
+	row-gap: 16px;
 }
-.question__reveal__answer__grid__odd .correct__answer, .question__reveal__answer__grid__odd .uncorrect__answer,
-.question__reveal__answer__grid__even .correct__answer, .question__reveal__answer__grid__even .uncorrect__answer {
-    background: var(--active-color);
-    text-align: center;
-    border-radius: 5px;
-    padding: 8px 30px 8px 30px;
+.question__reveal__answer__grid__odd .correct__answer,
+.question__reveal__answer__grid__odd .uncorrect__answer,
+.question__reveal__answer__grid__even .correct__answer,
+.question__reveal__answer__grid__even .uncorrect__answer {
+	background: var(--active-color);
+	text-align: center;
+	border-radius: 5px;
+	padding: 8px 30px 8px 30px;
 }
 .question__reveal__answer__grid__odd .correct__answer img,
 .question__reveal__answer__grid__odd .uncorrect__answer img,
 .question__reveal__answer__grid__even .correct__answer img,
-.question__reveal__answer__grid__even .uncorrect__answer img{
-    width: 150px;
-    margin-bottom: 10px;
+.question__reveal__answer__grid__even .uncorrect__answer img {
+	width: 150px;
+	margin-bottom: 10px;
 }
 .question__reveal__answer__grid__odd .uncorrect__answer,
 .question__reveal__answer__grid__even .uncorrect__answer {
-    background: var(--unactive-color);
+	background: var(--unactive-color);
 }
 
+
+.question__explanation__container > .question {
+	display: flex;
+	width: 100%;
+	font-size: 20px;
+	margin-bottom: 50px;
+	margin-top: 30px;
+	white-space: pre-wrap;
+  font-weight: 500;
+}
+
+.qustion-icon-svg {
+  width: 18px;
+  height: 18px;
+  margin-right: 6px;
+}
+.qustion-icon-svg > svg {
+  width: 100%;
+  height: 100%;
+  margin-top: 6px;
+}
 
 .back__home__btn {
-    position: fixed;
-    display: flex;
-    bottom: 10px;
-    text-align: center;
-    right: 40px;
-    transition: .3s;
+	position: fixed;
+	display: flex;
+	bottom: 10px;
+	text-align: center;
+	right: 40px;
+	transition: 0.3s;
 }
 .back__home__btn:hover {
-    transform: scale(1.05);
-    opacity: .7;
+	transform: scale(1.05);
+	opacity: 0.7;
 }
 .back__home__btn:active {
-    transform: scale(0.95);
-    opacity: 1;
+	transform: scale(0.95);
+	opacity: 1;
 }
 .back__home__btn svg {
-    margin-right: 10px;
-    margin-top: 8px;
+	margin-right: 10px;
+	margin-top: 8px;
 }
 
 .back__home__btn p {
-    font-size: 24px;
+	font-size: 24px;
 }
+
+.fill-correct-answer-container {
+	display: grid;
+	grid-template-columns: auto auto;
+	gap: 5px;
+	max-width: 500px;
+	margin-bottom: 30px;
+}
+
+.fill-correct-answer-container > .property {
+	display: flex;
+	align-items: center;
+	font-size: 20px;
+	margin-right: 30px;
+	text-shadow: 2px 1px 3px rgba(0, 0, 0, 1);
+	white-space: pre-wrap;
+}
+.fill-correct-answer-container > .property > .icon {
+	width: 20px;
+	height: 20px;
+	margin-right: 6px;
+}
+.fill-correct-answer-container > .icon > svg {
+	width: 100%;
+	height: 100%;
+}
+
+.main-fill-correct-answer > .main-property {
+	display: flex;
+	align-items: center;
+	font-size: 22px;
+}
+.fill-explanation-icon-text {
+	margin: 0;
+	margin-bottom: 30px;
+	color: var(--alpha-color);
+	padding-left: 3px;
+}
+.main-fill-correct-answer > .main-property > .property {
+	display: flex;
+	align-items: center;
+	font-size: 30px;
+	margin: 0;
+	margin-right: 30px;
+}
+
+.main-fill-correct-answer > .main-property > .property > .icon {
+	width: 28px;
+	height: 28px;
+	margin-right: 6px;
+}
+
 
