--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,9 @@
 body {
 	margin: 0;
 	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
+	-moz-osx-font-smoothing: grayscale;	
+	background-color: #0f0f0f;
+	overflow-x: hidden;
 }
 
 * {
