--- a/src/pages/quiz/reveal/style.css
+++ b/src/pages/quiz/reveal/style.css
@@ -3,7 +3,10 @@
 }
 
 body {
-	background: var(--web-background-color);
+	margin: 0;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;	
+	background-color: #0f0f0f;
 	overflow-x: hidden;
 }
 
