--- a/src/pages/quiz/summary/sort.switch/sort.switch.css
+++ b/src/pages/quiz/summary/sort.switch/sort.switch.css
@@ -2,8 +2,7 @@
 	cursor: pointer;
     display: flex;
 	justify-content: end;
-	right: 0;
-	top: 0;
+	background: red;
 	transition: .3s;
     align-items: center;
 }
