--- a/src/pages/quiz/summary/summary.css
+++ b/src/pages/quiz/summary/summary.css
@@ -1,4 +1,5 @@
 .summarized__container {
+	margin-top: -1rem;
 	padding: 1rem 2rem 1rem 2rem;
 }
 
@@ -24,12 +25,13 @@
 
 .participants__summary {
 	width: 45.25rem;
-	height: 59.625rem;
+	min-height:83.25dvh;
 	flex-shrink: 0;
 	padding: 0 0.5rem 0 0.5rem;
 	border-radius: 0.3125rem;
 	background: rgba(38, 38, 38, 0.30);
 	margin: 0 0.75rem 0 0;
+	overflow-y: scroll;
 }
 
 .participants__summary__instructor {
@@ -84,7 +86,6 @@
 	overflow: hidden;
 	text-overflow: ellipsis;
 	margin-right: 0.9rem;
-	background: green;
 }
 
 .participants__summary__list__other__info__grid {
@@ -95,7 +96,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: start;
-	background: rebeccapurple;
 	padding-left: 0.25rem;
 	padding-right: 0.25rem;
 }
@@ -128,6 +128,7 @@
 	border-radius: 0.3125rem;
 	background: rgba(38, 38, 38, 0.30);
 	padding: 0 0.5rem 0 0.5rem;
+	width: 1035px;
 }
 
 .left-summarized {
@@ -144,11 +145,9 @@
 
 .crop__grid {
 	display: flex;
-	justify-content: space-evenly;
-	background: black;
+	justify-content: flex-end;
+	width: 100%;
 }
-
-
 
 .avg-prog-percent-container {
 	display: flex;
@@ -156,3 +155,32 @@
 }
 
 
+.top-summarized-content {
+	display: flex;
+}
+
+.right-summarized {
+	margin-top: 1.15rem;
+}
+.right-summarized-content {
+	display: flex;
+	flex-direction: column;
+}
+
+.bottom-summarized-container {
+	position: fixed;
+	margin-top: 27rem;
+	background: rgba(38, 38, 38, 0.30);
+	padding: 0 0.5rem 0 0.5rem;
+	border-radius: 0.3125rem;
+}
+
+.personal_summarized_grid {
+    display: grid;
+    grid-template-columns: auto auto auto auto;
+    row-gap: 1.8rem;
+	width: 1020px;
+}
+.adjust_buttom_margin {
+	margin-top: 1rem;
+}
