--- a/src/pages/quiz/summary/title.value/title.value.css
+++ b/src/pages/quiz/summary/title.value/title.value.css
@@ -3,9 +3,7 @@
 }
 
 .avg_header {
-	position: relative;
 	display: flex;
-	flex-direction: column;
 }
 
 .avg_header_title {
@@ -15,11 +13,10 @@
 }
 
 .avg_header_svg {
-	position: absolute;
 	width: 0.625rem;
 	height: 0.625rem;
-	top: .45rem;
-	right: -.8rem;
+	margin-top: .40rem;
+	margin-left: .3rem;
 }
 .avg_header_svg > svg {
 	width: 100%;
@@ -29,4 +26,13 @@
 .avg_result {
 	color: #C9D1D9;
 	font-size: 2rem;
+}
+
+.avg_header_title_svg {
+	width: 1.875rem;
+	margin-right: 0.5rem;
+}
+.avg_header_title_svg > svg {
+	width: 100%;
+	height: 100%;
 }
